--- a/stocktweets-api/package.json
+++ b/stocktweets-api/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "minimist": "^1.2.5",
     "mocha": "^5.2.0",
     "nodemon": "^1.19.4",
     "supertest": "^3.4.2"
